Commited Changes - Final Code